--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,5 +1,7 @@
-name: Generate Snake
 
+name: Generate Snake
+permissions:
+  contents: write
 on:
   schedule:
     - cron: "0 0 * * *"   # runs daily
