--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -15,10 +15,9 @@ jobs:
         with:
           github_user_name: arnav7777
           outputs: |
-            dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake.gif
+            dist/snake.svg
             snake_color: "#ff9800"
-             bg_color: "#0d1117"
+            bg_color: "#0d1117"
 
       - name: Push snake
         uses: crazy-max/ghaction-github-pages@v4
