--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -15,9 +15,8 @@ jobs:
         with:
           github_user_name: arnav7777
           outputs: |
-            dist/snake.svg
-            snake_color: "#ff9800"
-            bg_color: "#0d1117"
+            dist/github-snake-dark.svg?palette=github-dark
+            dist/github-snake-light.svg?palette=github-light
 
       - name: Push snake
         uses: crazy-max/ghaction-github-pages@v4
