--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -15,9 +15,9 @@ jobs:
         with:
           github_user_name: arnav7777
           outputs: |
-            dist/github-snake-dark.svg?palette=github-dark
-            dist/github-snake-light.svg?palette=github-light
-
+            dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake.gif
+            
       - name: Push snake
         uses: crazy-max/ghaction-github-pages@v4
         with:
