--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -17,6 +17,8 @@ jobs:
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake.gif
+            dist/github-snake-dark.svg?palette=github-dark
+            dist/github-snake-light.svg?palette=github-light
             
       - name: Push snake
         uses: crazy-max/ghaction-github-pages@v4
